# geobn

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml
api/internals/: index.html
api/network/: index.html
api/realtime/: index.html
api/result/: index.html
api/sources/: index.html
api/sources/core/: index.html
api/sources/wcs/: index.html
concepts/: index.html
contributing/: index.html
docs/: concepts.md  contributing.md  index.md  installation.md
docs/api/: internals.md  network.md  realtime.md  result.md
docs/api/sources/: core.md  index.md  ocean.md  terrain.md  wcs.md  weather.md
docs/examples/: karmsundet.md  lyngen_alps.md  maritime_norway.md
examples/karmsundet/: .gitignore  create_ais_density.py  index.html  run_example.py
examples/lyngen_alps/: avalanche_risk.bif  index.html  run_example.py
examples/maritime_norway/: maritime_norway.bif  run_example.py
installation/: index.html
search/: search_index.json
src/geobn/: __init__.py  _io.py  _viz.py  discretize.py  grid.py  inference.py  network.py  result.py
src/geobn/sources/: __init__.py  _base.py  _cache.py  array_source.py  barentswatch_source.py  copernicus_source.py  emodnet_source.py  (+8 more)
tests/: test_cache.py  test_discretize.py  test_inference.py  test_integration.py  test_new_sources.py  test_realtime.py  test_result.py  test_sources.py  test_viz.py
